<resources>
    <string name="app_name">Rogainer</string>
    <string name="settings">Settings</string>
    <string name="donate">Donate</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="map_view_settings">Map view settings</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    "@array/underlayers_array"
    <string name="underlayers_array_default">Don\'t show</string>
    <string-array name="underlayers_array_values">
        <item>Don\'t show</item>
        <item>Google</item>
        <item>Yandex</item>
        <item>OSM</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="view_settings_dialog_title">Show</string>
    <string name="view_settings_dialog_positive">OK</string>
    <string name="view_settings_dialog_negative">Cancel</string>
    <string name="view_settings_dialog_labels">Labels</string>
    <string name="view_settings_dialog_numbers">Numbers</string>
    <string name="view_settings_dialog_routes">Routes</string>
    <string name="view_settings_dialog_underlayer">Underlayer</string>
    <string name="view_settings_dialog_opacity">Map opacity</string>
    <string name="view_settings_file_key" translatable="false">com.rogainer.rogainer.VIEW_SETTINGS_FILE_KEY</string>
</resources>
