<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:keepScreenOn="false">

    <CheckBox
        android:text="@string/view_settings_dialog_labels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/labelsCheckBox" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/underlayerSpinner"
        android:entries="@array/underlayers_array" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/opacitySeekBar"
        android:max="100"
        android:longClickable="false"
        android:progress="100" />

    <TextView
        android:text="@string/opacity_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <CheckBox
        android:text="@string/view_settings_dialog_numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/numbersCheckBox" />

    <CheckBox
        android:text="@string/view_settings_dialog_routes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/routesCheckBox" />
</LinearLayout>