<?xml version="1.0" encoding="utf-8"?>


<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="inline">

        <CheckBoxPreference
            android:title="@string/view_settings_dialog_labels"
            android:defaultValue="true"
            android:id="@+id/labelsCheckBox" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="dialog">

        <EditTextPreference
            android:key="edittext_preference"
            android:title="test"
            android:summary="testtest"
            android:dialogTitle="testtesttest" />

        <ListPreference
            android:title="@string/view_settings_dialog_underlayer"
            android:entries="@array/underlayers_array_values"
            android:defaultValue="@string/underlayers_array_default"
            android:summary="@string/underlayers_array_default"
            android:id="@+id/underlayerSpinner" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="launch">

        <!-- This PreferenceScreen tag sends the user to a new fragment of
             preferences.  If running in a large screen, they can be embedded
             inside of the overall preferences UI. -->
        <PreferenceScreen
            android:fragment="com.rogainer.rogainer.AppPreferencesActivity$Prefs1FragmentInner"
            android:title="title_fragment_preference"
            android:summary="summary_fragment_preference">
            <!-- Arbitrary key/value pairs can be included for fragment arguments
            <extra android:name="someKey"
                android:value="somePrefValue" />-->
        </PreferenceScreen>

        <!-- This PreferenceScreen tag sends the user to a completely different
             activity, switching out of the current preferences UI. -->
        <PreferenceScreen
            android:title="title_intent_preference"
            android:summary="summary_intent_preference">
            <intent android:action="android.intent.action.VIEW"
                android:data="http://www.android.com" />

        </PreferenceScreen>
    </PreferenceCategory>


    <PreferenceCategory
        android:title="attributes">

        <CheckBoxPreference
            android:key="parent_checkbox_preference"
            android:title="title_parent_preference"
            android:summary="summary_parent_preference" />

        <!-- The visual style of a child is defined by this styled theme attribute. -->
        <CheckBoxPreference
            android:key="child_checkbox_preference"
            android:dependency="parent_checkbox_preference"
            android:title="title_child_preference"
            android:summary="summary_child_preference" />

    </PreferenceCategory>

</PreferenceScreen>